--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "dependencies": {
-    "bonjour": "^3.5.0"
+    "bonjour": "^3.5.0",
+    "colors": "^1.4.0"
   },
   "optionalDependencies": {
     "rpi-gpio": "^2.1.7"
